--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 # Dependency directories
 node_modules/
 # dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+*.env
+
 # Logs folder
 /Logs
 # NPVR folder(s)
