--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "type": "module",
   "dependencies": {
     "@fastify/cors": "^8.2.1",
+    "dotenv": "^16.0.3",
     "fastify": "^4.15.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
