--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "start": "set NODE_ENV=production&& node src/server.js",
-    "dev": "node --watch src/server.js",
+    "dev": "nodemon  src/server.js",
     "copydb": "run-p -n copydb:*",
     "copydb:npvr": "pwsh -NoProfile -ExecutionPolicy Unrestricted -Command Copy-Item 'D:\\Users\\Public\\NPVR-data\\npvr.db3' -Destination 'NPVR' -Force",
     "copydb:config": "pwsh -NoProfile -ExecutionPolicy Unrestricted -Command Copy-Item 'D:\\Users\\Public\\NPVR-data\\config.xml' -Destination 'NPVR' -Force",
@@ -23,6 +23,7 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
+    "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5"
   }
 }
