--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "start": "set NODE_ENV=production&& node src/server.js",
-    "dev": "nodemon  src/server.js",
+    "dev": "nodemon --watch ./src --delay 1 src/server.js",
     "copydb": "run-p -n copydb:*",
     "copydb:npvr": "pwsh -NoProfile -ExecutionPolicy Unrestricted -Command Copy-Item 'D:\\Users\\Public\\NPVR-data\\npvr.db3' -Destination 'NPVR' -Force",
     "copydb:config": "pwsh -NoProfile -ExecutionPolicy Unrestricted -Command Copy-Item 'D:\\Users\\Public\\NPVR-data\\config.xml' -Destination 'NPVR' -Force",
@@ -14,11 +14,11 @@
   },
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "@fastify/cors": "^8.2.1",
     "dotenv": "^16.0.3",
     "fastify": "^4.15.0",
+    "ip": "^1.1.8",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
