--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   "devDependencies": {
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5"
+  },
+  "nodemonConfig": {
+    "events": {
+      "start": "cls || clear"
+    }
   }
 }
