--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "dotenv": "^16.0.3",
     "fastify": "^4.15.0",
     "ip": "^1.1.8",
+    "node-cache": "^5.1.2",
     "winston": "^3.8.2",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "xml2js": "^0.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
