fastify route(s) for trandcoding, video. Fastify static & hooks. graceful shutdown

--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/autoload": "^5.7.1",
     "@fastify/cors": "^8.2.1",
+    "@fastify/static": "^6.10.1",
+    "chokidar": "^3.5.3",
     "dotenv": "^16.0.3",
     "fastify": "^4.15.0",
+    "fastify-favicon": "^4.3.0",
     "ip": "^1.1.8",
+    "luxon": "^3.3.0",
     "node-cache": "^5.1.2",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1",
